@@ -15,17 +15,31 @@ import org.springframework.util.StringUtils;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.stream.Collectors;
+import java.util.List;
 
 @Component
 @RequiredArgsConstructor
 public class JwtAuthenticationFilter extends OncePerRequestFilter {
 
+    private static final List<String> PUBLIC_PATHS = List.of(
+            "/ping",
+            "/swagger-ui.html/**",
+            "/v3/api-docs/**",
+            "/registrar",
+            "/autenticar",
+            "/tiposDocumento"
+    );
     private final JwtTokenProvider jwtTokenProvider;
 
+    @Override
+    protected boolean shouldNotFilter(HttpServletRequest request) {
+        String path = request.getRequestURI();
+        return PUBLIC_PATHS.stream().anyMatch(path::contains);
+    }
+
+    @Override
     protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain filterChain)
             throws ServletException, IOException {
-
         try {
             String jwt = getJwtFromRequest(request);
 
@@ -33,9 +47,9 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
                 ClientAuthenticationInfo clientInfo = jwtTokenProvider.getAuthenticationInfoFromToken(jwt);
 
                 UsernamePasswordAuthenticationToken authentication = new UsernamePasswordAuthenticationToken(
-                        clientInfo.getUsername(), null, clientInfo.getRoles().stream()
+                        clientInfo.getDocumentNumber(), null, clientInfo.getRoles().stream()
                         .map(SimpleGrantedAuthority::new)
-                        .collect(Collectors.toList()));
+                        .toList());
 
                 authentication.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
 
@@ -50,9 +64,8 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
 
     private String getJwtFromRequest(HttpServletRequest request) {
         String bearerToken = request.getHeader("Authorization");
-        if (StringUtils.hasText(bearerToken) && bearerToken.startsWith("Bearer ")) {
+        if (StringUtils.hasText(bearerToken) && bearerToken.startsWith("Bearer "))
             return bearerToken.substring(7);
-        }
         return null;
     }
 }
